# miniv_1_1_description

./: CMakeLists.txt  package.xml
config/: miniv_rviz_config.rviz
launch/: view_model.launch.xml
urdf/: miniv_robot.xacro  thruster.xacro
